# coordinated-agent-team

./: .gitignore  README.md
.github/agents/: 00-orchestrator.md  01-spec-agent.md  02-architect.md  03-planner.md  04-coder.md  05-reviewer.md  06-qa.md  07-security.md  09-docs.md  10-designer.md  11-researcher.md  CONTRACT.md  DISPATCH-REFERENCE.md  WORKFLOW.md
demo-click-message/: README.md  app.js  index.html  styles.css
demo-function-plot-cli/: README.md  pyproject.toml
demo-function-plot-cli/function_plot_cli/: __init__.py  cli.py  config.py  errors.py  exporter.py  expression.py  input_parser.py  models.py  plotting.py  renderer.py  storage.py  ui.py
demo-function-plot-cli/tests/: test_cli_flow.py  test_exporter.py  test_expression.py  test_plotting.py  test_renderer.py  test_storage.py
demo-greeting/: README.md  app.js  index.html  styles.css
demo-greeting/agent-work/: acceptance.json  architecture.md  report.md  spec.md  status.json  tasks.yaml
demo-greeting/agent-work/adr/: ADR-001.md
demo-greeting/agent-work/design-specs/: design-spec-greeting-card.md
demo-greeting/agent-work/research/: research-existing-patterns.md
demo-greeting/tests/: app.test.js
demo-traffic-simulator/: README.md  index.html
demo-traffic-simulator/public/: app.js  controls.js  metrics.js  renderer-canvas.js  simulation.js  state.js  storage.js  styles.css  traffic-model.js  ui.js
